# DStream

./: .gitignore  Cargo.toml  DStreams.canvas  EXECUTION_GUIDE.md  main.py  readme.md
examples/: postgres-target.json  tap-config.json  target-config.json
migration/: idea.md  manage.py
migration/Dstream/: apps.py  models.py
migration/Dstream/migrations/: 0001_initial.py  0002_connector.py  0003_stream.py  0004_catalog.py  0005_state.py  0006_rename_source_connector_streams_source_config_and_more.py
migration/proj/: settings.py
src/: main.rs
src/cli/: commands.rs  mod.rs  runner.rs
src/core/: catalog.rs  client.rs  config.rs  errors.rs  http.rs  mod.rs  pagination.rs  protocol.rs  state.rs  tests.rs  traits.rs
src/dal/: idea.md  query.rs
