[package]
name = "dstreams"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core
arrow = "53.0.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"

# Error handling and utilities
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
url = "2.5"
uuid = { version = "1.10", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.8"
